--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
   </div>
 </section>
 
+<!-- autoplay controls muted loop playsinline -->
 <!-- testcvpr4_27.mp4 testcvpr12_11.mp4 testcvpr16_21.mp4 -->
 <section class="hero is-light is-small">
   <div class="hero-body">
@@ -246,37 +247,37 @@
           </video>
         </div>
         <div class="item item-chair-tp">
-          <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="chair-tp" autoplay muted loop playsinline height="100%">
             <source src="./static/videos/testcvpr12_11.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-shiba">
-          <video poster="" id="shiba" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="shiba" autoplay muted loop playsinline height="100%">
             <source src="./static/videos/testcvpr16_21.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-fullbody">
-          <video poster="" id="fullbody" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="fullbody" autoplay muted loop playsinline height="100%">
             <source src="./static/videos/fullbody.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-blueshirt">
-          <video poster="" id="blueshirt" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="blueshirt" autoplay muted loop playsinline height="100%">
             <source src="./static/videos/blueshirt.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-mask">
-          <video poster="" id="mask" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="mask" autoplay muted loop playsinline height="100%">
             <source src="./static/videos/mask.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-coffee">
-          <video poster="" id="coffee" autoplay controls muted loop playsinline height="100%">
+          <video poster="" id="coffee" autoplay muted loop playsinline height="100%">
             <source src="./static/videos/coffee.mp4"
                     type="video/mp4">
           </video>
@@ -354,7 +355,6 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
                  muted
                  preload
                  playsinline
@@ -383,7 +383,6 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
                  muted
                  preload
                  playsinline
@@ -413,7 +412,6 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
                  muted
                  preload
                  playsinline
@@ -445,7 +443,6 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
                  muted
                  preload
                  playsinline
@@ -476,7 +473,6 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
                  muted
                  preload
                  playsinline
@@ -505,7 +501,6 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
                  muted
                  preload
                  playsinline
@@ -534,7 +529,6 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
                  muted
                  preload
                  playsinline
@@ -564,7 +558,6 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
                  muted
                  preload
                  playsinline
@@ -593,7 +586,6 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
                  muted
                  preload
                  playsinline
@@ -625,7 +617,6 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
                  muted
                  preload
                  playsinline
@@ -654,7 +645,6 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
                  muted
                  preload
                  playsinline
@@ -683,7 +673,6 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
                  muted
                  preload
                  playsinline
@@ -712,7 +701,6 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
                  muted
                  preload
                  playsinline
@@ -741,7 +729,6 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
                  muted
                  preload
                  playsinline
@@ -770,7 +757,6 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
                  muted
                  preload
                  playsinline
