--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
-                 preload
+                 loop
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/v1.mp4"
@@ -384,7 +384,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
-                 preload
+                 loop
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/testcvpr10_10.mp4"
@@ -413,7 +413,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
-                 preload
+                 loop
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/testcvpr41_10.mp4"
@@ -444,7 +444,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
-                 preload
+                 loop
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/testcvpr3t4.mp4"
@@ -474,7 +474,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
-                 preload
+                 loop
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/testcvpr9_1.mp4"
@@ -502,7 +502,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
-                 preload
+                 loop
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/v2.mp4"
@@ -530,7 +530,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
-                 preload
+                 loop
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/v3.mp4"
@@ -559,7 +559,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
-                 preload
+                 loop
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/testcvpr3_27.mp4"
@@ -587,7 +587,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
-                 preload
+                 loop
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/testcvpr2_21.mp4"
@@ -618,7 +618,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
-                 preload
+                 loop
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/testcvpr12_13.mp4"
@@ -646,7 +646,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
-                 preload
+                 loop
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/testcvpr12_ballet0_whPsZS.mp4"
@@ -673,7 +673,7 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 muted
+                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
@@ -702,7 +702,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
-                 preload
+                 loop
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/testcvpr4_15.mp4"
@@ -730,7 +730,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
-                 preload
+                 loop
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/testcvpr10genlly1.mp4"
@@ -758,7 +758,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
-                 preload
+                 loop
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/v5.mp4"
