--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{park2021nerfies,
-  author    = {Li, Boyi and Rajasegaran, Jathushan and Gandelsman, Yossi and Efro, Alexei A. and Malik, Jitendra},
+  author    = {Li, Boyi and Rajasegaran, Jathushan and Gandelsman, Yossi and Efros, Alexei A. and Malik, Jitendra},
   title     = {Synthesizing Moving People with 3D Control},
   journal   = {Arxiv},
   year      = {2024},
