--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
             background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
         }
+      .citation-block {
+            background-color: black !important;
+            color: white; /* Set text color to white for better visibility on a black background */
+        }
       .pre {
             background-color: black !important;
             color: white; /* Set text color to white for better visibility on a black background */
