--- a/index.html
+++ b/index.html
@@ -816,9 +816,10 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
+    <div class="citation-block">
     <pre><code>@article{park2021nerfies,
   author    = {Li, Boyi and Rajasegaran, Jathushan and Gandelsman, Yossi and Efros, Alexei A. and Malik, Jitendra},
-  title     = {Synthesizing Moving People with 3D Control},
+  title     = {Synthesizing Moving People with 3D Control*},
   journal   = {Arxiv},
   year      = {2024},
 }</code></pre>
