--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
+                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
@@ -356,6 +357,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
+                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
@@ -385,6 +387,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
+                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
@@ -416,6 +419,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
+                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
@@ -446,6 +450,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
+                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
@@ -474,6 +479,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
+                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
@@ -502,6 +508,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
+                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
@@ -531,6 +538,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
+                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
@@ -559,6 +567,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
+                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
@@ -590,6 +599,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
+                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
@@ -618,6 +628,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
+                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
@@ -645,6 +656,7 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
+                 muted
                  loop
                  preload
                  playsinline
@@ -674,6 +686,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
+                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
@@ -702,6 +715,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
+                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
@@ -730,6 +744,7 @@
         <div class="content has-text-centered">
           <video id="replay-video"
                  muted
+                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
@@ -757,11 +772,11 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <div class="citation-block">
-    @article{park2021nerfies,
-  author    = {Li, Boyi and Rajasegaran, Jathushan and Gandelsman, Yossi and Efros, Alexei A. and Malik, Jitendra},
-  title     = {Synthesizing Moving People with 3D Control},
-  journal   = {Arxiv},
-  year      = {2024},
+    @article{li20243dhm,<br>&nbsp;
+  author    = {Li, Boyi and Rajasegaran, Jathushan and Gandelsman, Yossi and Efros, Alexei A. and Malik, Jitendra},<br>&nbsp;
+  title     = {Synthesizing Moving People with 3D Control},<br>&nbsp;
+  journal   = {Arxiv},<br>&nbsp;
+  year      = {2024},<br>&nbsp;
 }
   </div>
 </section>
