--- a/index.html
+++ b/index.html
@@ -773,11 +773,11 @@
     <h2 class="title">BibTeX</h2>
     <div class="citation-block">
     @article{li20243dhm,<br>&nbsp;
-  author    = {Li, Boyi and Rajasegaran, Jathushan and Gandelsman, Yossi and Efros, Alexei A. and Malik, Jitendra},<br>&nbsp;
-  title     = {Synthesizing Moving People with 3D Control},<br>&nbsp;
-  journal   = {Arxiv},<br>&nbsp;
-  year      = {2024},<br>&nbsp;
-}
+              author    = {Li, Boyi and Rajasegaran, Jathushan and Gandelsman, Yossi and Efros, Alexei A. and Malik, Jitendra},<br>&nbsp;
+              title     = {Synthesizing Moving People with 3D Control},<br>&nbsp;
+              journal   = {Arxiv},<br>&nbsp;
+              year      = {2024},<br>
+            }
   </div>
 </section>
 
