--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               </span>
               <!-- Video Link. -->
               <span class="link-block">
-                <a href="https://www.youtube.com/"
+                <a href="https://www.youtube.com/@boyili3727"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
@@ -207,26 +207,26 @@
 </section>
 
 <!-- autoplay controls muted loop playsinline -->
-<!-- testcvpr4_27.mp4 testcvpr12_11.mp4 testcvpr16_21.mp4 -->
+<!-- test4_27.mp4 test12_11.mp4 test16_21.mp4 -->
 <section class="hero is-light is-small">
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-steve">
           <video poster="" id="steve" autoplay muted loop playsinline height="100%">
-            <source src="./static/videos/testcvpr4_27.mp4"
+            <source src="./static/videos/test4_27.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-chair-tp">
           <video poster="" id="chair-tp" autoplay muted loop playsinline height="100%">
-            <source src="./static/videos/testcvpr12_11.mp4"
+            <source src="./static/videos/test12_11.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-shiba">
           <video poster="" id="shiba" autoplay muted loop playsinline height="100%">
-            <source src="./static/videos/testcvpr16_21.mp4"
+            <source src="./static/videos/test16_21.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -295,11 +295,12 @@
     <!--/ Abstract. -->
 
     <!-- Paper video. -->
+<!--     https://www.youtube.com/embed/ -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Video</h2>
         <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/"
+          <iframe src="https://www.youtube.com/@boyili3727"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
@@ -308,7 +309,7 @@
   </div>
 </section>
 
-
+<!-- Animations start -->
 <section class="section">
   <div class="container is-max-desktop">
 
@@ -327,8 +328,8 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
+                 controls
                  muted
-                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
@@ -356,12 +357,12 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
+                 controls
                  muted
-                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
-            <source src="./static/videos/testcvpr10_10.mp4"
+            <source src="./static/videos/test10_10.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -386,12 +387,12 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
+                 controls
                  muted
-                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
-            <source src="./static/videos/testcvpr41_10.mp4"
+            <source src="./static/videos/test41_10.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -418,12 +419,12 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
+                 controls
                  muted
-                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
-            <source src="./static/videos/testcvpr3t4.mp4"
+            <source src="./static/videos/test3t4.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -449,12 +450,12 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
+                 controls
                  muted
-                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
-            <source src="./static/videos/testcvpr9_1.mp4"
+            <source src="./static/videos/test9_1.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -478,8 +479,8 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
+                 controls
                  muted
-                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
@@ -507,8 +508,8 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
+                 controls
                  muted
-                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
@@ -537,12 +538,12 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
+                 controls
                  muted
-                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
-            <source src="./static/videos/testcvpr3_27.mp4"
+            <source src="./static/videos/test3_27.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -566,12 +567,12 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
+                 controls
                  muted
-                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
-            <source src="./static/videos/testcvpr2_21.mp4"
+            <source src="./static/videos/test2_21.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -598,12 +599,12 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
+                 controls
                  muted
-                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
-            <source src="./static/videos/testcvpr12_13.mp4"
+            <source src="./static/videos/test12_13.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -627,12 +628,12 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
+                 controls
                  muted
-                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
-            <source src="./static/videos/testcvpr12_ballet0_whPsZS.mp4"
+            <source src="./static/videos/test12_ballet0_whPsZS.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -656,8 +657,8 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
+                 controls
                  muted
-                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
@@ -685,12 +686,12 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
+                 controls
                  muted
-                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
-            <source src="./static/videos/testcvpr4_15.mp4"
+            <source src="./static/videos/test4_15.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -714,12 +715,12 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
+                 controls
                  muted
-                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
-            <source src="./static/videos/testcvpr10genlly1.mp4"
+            <source src="./static/videos/test10genlly1.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -743,8 +744,8 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
+                 controls
                  muted
-                 loop
                  preload
                  playsinline
                  height="100%" autoplay>
@@ -772,10 +773,10 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <div class="citation-block">
-    @article{li20243dhm,<br>&nbsp;
-              author    = {Li, Boyi and Rajasegaran, Jathushan and Gandelsman, Yossi and Efros, Alexei A. and Malik, Jitendra},<br>&nbsp;
-              title     = {Synthesizing Moving People with 3D Control},<br>&nbsp;
-              journal   = {Arxiv},<br>&nbsp;
+    @article{li20243dhm,<br>&nbsp&nbsp;
+              author    = {Li, Boyi and Rajasegaran, Jathushan and Gandelsman, Yossi and Efros, Alexei A. and Malik, Jitendra},<br>&nbsp&nbsp;
+              title     = {Synthesizing Moving People with 3D Control},<br>&nbsp&nbsp;
+              journal   = {Arxiv},<br>&nbsp&nbsp;
               year      = {2024},<br>
             }
   </div>
