--- a/index.html
+++ b/index.html
@@ -213,19 +213,19 @@
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-steve">
-          <video poster="" id="steve" autoplay muted loop playsinline height="100%">
+          <video poster="" id="steve" autoplay muted loop preload playsinline height="100%">
             <source src="./static/videos/test4_27.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-chair-tp">
-          <video poster="" id="chair-tp" autoplay muted loop playsinline height="100%">
+          <video poster="" id="chair-tp" autoplay muted loop preload playsinline height="100%">
             <source src="./static/videos/test12_11.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-shiba">
-          <video poster="" id="shiba" autoplay muted loop playsinline height="100%">
+          <video poster="" id="shiba" autoplay muted loop preload playsinline height="100%">
             <source src="./static/videos/test16_21.mp4"
                     type="video/mp4">
           </video>
@@ -328,9 +328,7 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
-                 muted
-                 preload
+                 autoplay muted loop preload
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/v1.mp4"
@@ -357,9 +355,7 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
-                 muted
-                 preload
+                 autoplay muted loop preload
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/test10_10.mp4"
@@ -387,9 +383,7 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
-                 muted
-                 preload
+                 autoplay muted loop preload
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/test41_10.mp4"
@@ -419,9 +413,7 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
-                 muted
-                 preload
+                 autoplay muted loop preload
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/test3t4.mp4"
@@ -450,9 +442,7 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
-                 muted
-                 preload
+                 autoplay muted loop preload
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/test9_1.mp4"
@@ -479,9 +469,7 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
-                 muted
-                 preload
+                 autoplay muted loop preload
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/v2.mp4"
@@ -508,9 +496,7 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
-                 muted
-                 preload
+                 autoplay muted loop preload
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/v3.mp4"
@@ -538,9 +524,7 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
-                 muted
-                 preload
+                 autoplay muted loop preload
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/test3_27.mp4"
@@ -567,9 +551,7 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
-                 muted
-                 preload
+                 autoplay muted loop preload
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/test2_21.mp4"
@@ -599,9 +581,7 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
-                 muted
-                 preload
+                 autoplay muted loop preload
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/test12_13.mp4"
@@ -628,9 +608,7 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
-                 muted
-                 preload
+                 autoplay muted loop preload
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/test12_ballet0_whPsZS.mp4"
@@ -657,9 +635,7 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
-                 muted
-                 preload
+                 autoplay muted loop preload
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/v6.mp4"
@@ -686,9 +662,7 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
-                 muted
-                 preload
+                 autoplay muted loop preload
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/test4_15.mp4"
@@ -715,9 +689,7 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
-                 muted
-                 preload
+                 autoplay muted loop preload
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/test10genlly1.mp4"
@@ -744,9 +716,7 @@
         </div>
         <div class="content has-text-centered">
           <video id="replay-video"
-                 controls
-                 muted
-                 preload
+                 autoplay muted loop preload
                  playsinline
                  height="100%" autoplay>
             <source src="./static/videos/v5.mp4"
@@ -773,11 +743,11 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <div class="citation-block">
-    @article{li20243dhm,<br>&nbsp&nbsp;
-              author    = {Li, Boyi and Rajasegaran, Jathushan and Gandelsman, Yossi and Efros, Alexei A. and Malik, Jitendra},<br>&nbsp&nbsp;
-              title     = {Synthesizing Moving People with 3D Control},<br>&nbsp&nbsp;
-              journal   = {Arxiv},<br>&nbsp&nbsp;
-              year      = {2024},<br>
+    @article{li20243dhm,<br>&nbsp&nbsp&nbsp&nbsp;
+                author    = {Li, Boyi and Rajasegaran, Jathushan and Gandelsman, Yossi and Efros, Alexei A. and Malik, Jitendra},<br>&nbsp&nbsp&nbsp&nbsp;
+                title     = {Synthesizing Moving People with 3D Control},<br>&nbsp&nbsp&nbsp&nbsp;
+                journal   = {Arxiv},<br>&nbsp&nbsp&nbsp&nbsp;
+                year      = {2024},<br>
             }
   </div>
 </section>
