--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
             color: #9F8C76 !important;
         }
       .publication-title {
-          color: #FED8B1 !important; /* Set text color to white for better visibility on a black background #FFAE42 */ 
+          color: #5CB3FF !important; /* Set text color to white for better visibility on a black background #FFAE42 */ 
       }
       .subtitle {
-          color: #FED8B1 !important; /* Set text color to white for better visibility on a black background */
+          color: #5CB3FF !important; /* Set text color to white for better visibility on a black background */
       }
       .section h2 {
-            color: #FED8B1 !important; /* Set the title color to white */
+            color: #5CB3FF !important; /* Set the title color to blue */
         }
       .section h3 {
             color: #FED8B1 !important; /* Set the title color to white */
