--- a/index.html
+++ b/index.html
@@ -743,10 +743,10 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <div class="citation-block">
-    @article{li20243dhm,<br>&nbsp&nbsp&nbsp&nbsp;
-                author    = {Li, Boyi and Rajasegaran, Jathushan and Gandelsman, Yossi and Efros, Alexei A. and Malik, Jitendra},<br>&nbsp&nbsp&nbsp&nbsp;
-                title     = {Synthesizing Moving People with 3D Control},<br>&nbsp&nbsp&nbsp&nbsp;
-                journal   = {Arxiv},<br>&nbsp&nbsp&nbsp&nbsp;
+    @article{li20243dhm,<br>&nbsp&nbsp&nbsp;
+                author    = {Li, Boyi and Rajasegaran, Jathushan and Gandelsman, Yossi and Efros, Alexei A. and Malik, Jitendra},<br>&nbsp&nbsp&nbsp;
+                title     = {Synthesizing Moving People with 3D Control},<br>&nbsp&nbsp&nbsp;
+                journal   = {Arxiv},<br>&nbsp&nbsp&nbsp;
                 year      = {2024},<br>
             }
   </div>
